--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body{
 	border: solid rgba(255, 255, 255, 0.5) 2px;
 	background: rgba(255, 255, 255, 0.5);
 	text-align: center;
+	z-index: 100;
 }
 
 
